mobile css done

--- a/css/layout.css
+++ b/css/layout.css
@@ -2,7 +2,10 @@
 
 
 @media only screen and (max-width: 767px){
-
+  body{
+  width: 480px;
+  margin: auto;
+}
 }
 @media only screen and (min-width: 768px){
 
