--- a/css/modules.css
+++ b/css/modules.css
@@ -86,27 +86,27 @@
     width: 190px;
     height: 250px;
     line-height: 250px;
-    float:right;
+    float:left;
     background: rgb(233, 212, 120);   }
    #f{
     width: 190px;
     height: 250px;
     line-height: 250px;
-    float:right;
+    float:left;
     background: rgb(115, 195, 219);
    }
    #g{
     width: 190px;
     height: 250px;
     line-height: 250px;
-    float:right;
+    float:left;
     background: rgb(255, 179, 179);
    }
    #h{
     width: 190px;
     height: 250px;
     line-height: 250px;
-    float:right;
+    float:left;
     background: rgb(212, 255, 133);
    }
    #i{
